# ClaudeImageGen

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: research.md
docs/superpowers/plans/: 2026-06-29-claude-imagegen.md
docs/superpowers/specs/: 2026-06-29-claude-imagegen-design.md
skills/generate-image/: SKILL.md
src/claude_imagegen/: __init__.py  candidates.py  caption.py  cli.py  critique.py  diffusion.py  embedding.py  enhance.py  eval_plan.py  generator.py  pair_audit.py  palette.py  pixels.py  prompt.py  quality.py  refine.py  render.py  scene.py  scene_plan.py  score.py  verify.py
tests/: test_caption.py  test_cli.py  test_critique.py  test_embedding.py  test_enhance.py  test_eval_plan.py  test_pair_audit.py  test_plugin_structure.py  test_prompt.py  test_quality.py  test_render_score.py  test_scene_plan.py
