[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-imagegen"
version = "0.1.8"
description = "CPU-first Claude Code image generation plugin prototype with optional local GPU diffusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
diffusion = [
  "accelerate>=1.11",
  "diffusers>=0.35",
  "torch>=2.3",
  "transformers>=4.53",
]

[project.scripts]
claude-imagegen = "claude_imagegen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:The configuration option \"asyncio_default_fixture_loop_scope\" is unset:pytest.PytestDeprecationWarning",
]
